RESOLVED FIXED133139
Garbage when rubber-banding at the right edge of a page zoomed to non-integral scale.
https://bugs.webkit.org/show_bug.cgi?id=133139
Summary Garbage when rubber-banding at the right edge of a page zoomed to non-integra...
alan
Reported 2014-05-20 16:33:22 PDT
1. Navigate to about:blank. 2. Zoom in (but not all the way! you need to be at a non-integral scale). 3. Rubber-band off the right edge of the page.
Attachments
Patch (6.56 KB, patch)
2014-05-20 20:36 PDT, alan
no flags
Patch (7.13 KB, patch)
2014-05-20 21:01 PDT, alan
no flags
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 (1.02 MB, application/zip)
2014-05-21 00:06 PDT, Build Bot
no flags
Patch (7.13 KB, patch)
2014-05-21 06:54 PDT, alan
no flags
alan
Comment 1 2014-05-20 20:36:02 PDT
Tim Horton
Comment 2 2014-05-20 20:44:22 PDT
Comment on attachment 231809 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231809&action=review > Source/WebCore/rendering/RenderLayerBacking.h:198 > + virtual bool needsPixelAligment() const override final; can't this whole class be final?
Simon Fraser (smfr)
Comment 3 2014-05-20 20:44:56 PDT
Comment on attachment 231809 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231809&action=review > Source/WebCore/rendering/RenderLayerBacking.cpp:2325 > + return !(m_owningLayer.isRootLayer() && renderer().frame().isMainFrame()); I think you should just return m_usingTiledCacheLayer.
Simon Fraser (smfr)
Comment 4 2014-05-20 20:45:10 PDT
Comment on attachment 231809 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231809&action=review > Source/WebCore/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=133139 Please list some radars here.
alan
Comment 5 2014-05-20 21:01:53 PDT
alan
Comment 6 2014-05-20 21:02:12 PDT
Comment on attachment 231811 [details] Patch EWSing
Build Bot
Comment 7 2014-05-21 00:06:52 PDT
Comment on attachment 231811 [details] Patch Attachment 231811 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6197641348120576 New failing tests: editing/unsupported-content/list-type-before.html editing/unsupported-content/table-type-before.html editing/unsupported-content/list-delete-003.html editing/unsupported-content/list-delete-001.html editing/unsupported-content/list-type-after.html platform/mac-wk2/tiled-drawing/tile-size-slow-zoomed.html editing/unsupported-content/table-delete-002.html editing/unsupported-content/table-type-after.html
Build Bot
Comment 8 2014-05-21 00:06:56 PDT
Created attachment 231817 [details] Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan
Comment 9 2014-05-21 06:54:57 PDT
alan
Comment 10 2014-05-21 06:55:14 PDT
Comment on attachment 231824 [details] Patch EWS again.
alan
Comment 11 2014-05-21 06:55:22 PDT
Comment on attachment 231824 [details] Patch EWS again.
WebKit Commit Bot
Comment 12 2014-05-21 09:07:28 PDT
Comment on attachment 231824 [details] Patch Clearing flags on attachment: 231824 Committed r169161: <http://trac.webkit.org/changeset/169161>
WebKit Commit Bot
Comment 13 2014-05-21 09:07:33 PDT
All reviewed patches have been landed. Closing bug.
Mark Hahnenberg
Comment 14 2014-05-23 10:33:10 PDT
(In reply to comment #12) > (From update of attachment 231824 [details]) > Clearing flags on attachment: 231824 > > Committed r169161: <http://trac.webkit.org/changeset/169161> It looks like this caused platform/mac-wk2/tiled-drawing/tile-size-slow-zoomed.html to start failing on the bots. Here's the results on the Mavericks bot: http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK2%20(Tests)/r169162%20(5869)/results.html Here's the history of the bot which shows that it started failing reliably after this revision: http://build.webkit.org/builders/Apple%20Mavericks%20Release%20WK2%20%28Tests%29?numbuilds=100
Mark Hahnenberg
Comment 15 2014-05-23 10:36:35 PDT
(In reply to comment #14) > (In reply to comment #12) > > (From update of attachment 231824 [details] [details]) > > Clearing flags on attachment: 231824 > > > > Committed r169161: <http://trac.webkit.org/changeset/169161> > > It looks like this caused platform/mac-wk2/tiled-drawing/tile-size-slow-zoomed.html to start failing on the bots. > > Here's the results on the Mavericks bot: http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK2%20(Tests)/r169162%20(5869)/results.html > > Here's the history of the bot which shows that it started failing reliably after this revision: http://build.webkit.org/builders/Apple%20Mavericks%20Release%20WK2%20%28Tests%29?numbuilds=100 Nevermind, the results were re-baselined in a later fix.
Note You need to log in before you can comment on or make changes to this bug.