Garbage when rubber-banding at the right edge of a page zoomed to non-integral scale. https://bugs.webkit.org/show_bug.cgi?id=133139 <rdar://problem/16503353>

Reviewed by Simon Fraser.

Do not pixel align the root content layer. The alignment code expands the graphics's layer size
which makes the right and bottom tiles bigger than the content.
Painting the body's background color produces pixel cracks, because the content can not
fill the expanded tiles completely.

Not testable.

* platform/graphics/GraphicsLayerClient.h:
(WebCore::GraphicsLayerClient::needsPixelAligment):
* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateGeometry):
(WebCore::GraphicsLayerCA::computePixelAlignment):
* platform/graphics/ca/mac/TileGrid.mm:
(WebCore::TileGrid::rectForTileIndex):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::needsPixelAligment):
* rendering/RenderLayerBacking.h:


Canonical link: https://commits.webkit.org/151173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169161 268f45cc-cd09-0410-ab3c-d52691b4dbfc